style.css
#mainborder {
  margin: auto;
  background-color: #e2b97d;
}

/*background image of services and contact sections*/
.row-header {
  margin: auto;
  width: 90%;
  background-image: url(teton.jpeg);
  background-repeat: no-repeat: round;
  background-size: cover;
  background-position: center;
  border: 2px solid grey;
  border-radius: 20px;
  padding: 20px;
}

/*rounding FB icon*/
#fbicon {
  border-radius: 50%;
}
/*payment option icons*/
#amex, #mcicon, #vicon, #ppicon, #vmicon {
  width: 90px;
}

#accordionicons {
  margin: left;
  max-width: 60px;
  padding: 10px;
}

#header {
  margin: auto;
  width: 95%;
  color: black;
  font-family: 'Caveat', cursive;
  text-align: center;
  text-shadow: 2px 2px yellow;
  background-image: linear-gradient(to bottom right, #203a09, #e3e4dd);
  background-color: lightgrey;
  background-size: auto;
  border: 2px solid #f9d054;
  border-radius: 60px;
  padding: 20px;
  opacity: 0.80;
}

#services {

  margin: auto;
  width: 85%;
  text-align: center;
  color: white;
  font-weight: bolder;
  text-shadow: 1px 2px black;
  background-image: linear-gradient(to bottom right, #203a09, #e3e4dd);
  background-color: lightgrey;
  border: 2px solid grey;
  border-radius: 20px;
  padding: 20px;
  opacity: 0.80;
}

#contact {
  margin: auto;
  width: 85%;
  color: #01310c;
  text-align: center;
  word-wrap:break-word;
  background-image: linear-gradient(to bottom right, #4b4d58, #e3e4dd);
  background-color: lightgrey;
  border: 2px solid grey;
  border-radius: 20px;
  padding: 10px;
  opacity: 0.90;
  margin-bottom: 10px;
}

#contactbuttonbar {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 10px;
}

#legaldisclaim {
  margin: auto;
  background-color: #e2b97d;
  width: 75%;
  text-align: center;
  background-size: auto;
  border: 2px solid grey;
  border-radius: 20px;
  padding: 20px;
  opacity: 0.7;
  margin-bottom: 10px;
  }

#logobar {
  display: flex;
  align-items: center;
  justify-content: center;
}

/*#contactbuttons {
  margin: auto;
  justify-content: center;
  border: 2px solid yellow;
  border-radius: 10px;
}*/

